Stop ActionBarButton from wrapping; add maxTextWidth property; use ellipsis for text-overflow

--- a/src/vs/platform/positronActionBar/browser/components/actionBarButton.css
+++ b/src/vs/platform/positronActionBar/browser/components/actionBarButton.css
@@ -17,6 +17,9 @@
 .action-bar-button-text {
 	margin: 0 4px;
 	font-size: 12px;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 }
 
 .action-bar-button-face:hover {
